commit inicial: notebook para descarga de datasets desde drive

--- a/notebooks/00_fetch_data.ipynb
+++ b/notebooks/00_fetch_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f8b0c07a",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "9956eb72",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Archivos ya presentes en data/raw. Nada que hacer.\n"
+      "⬇️ Descargando archive.zip desde Drive a ..\\data\\raw\\archive.zip ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?id=1ApZqHWxtuhxrNqdL-odfDxxIceoCiA2z\n",
+      "From (redirected): https://drive.google.com/uc?id=1ApZqHWxtuhxrNqdL-odfDxxIceoCiA2z&confirm=t&uuid=5983bf19-b250-4349-8c55-443ff3e491d2\n",
+      "To: c:\\Users\\samir\\Documents\\noveno semestre\\aprendizaje maquina\\stocksalmon\\data\\raw\\archive.zip\n",
+      "100%|██████████| 209M/209M [00:19<00:00, 10.9MB/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📦 Descomprimiendo ..\\data\\raw\\archive.zip en ..\\data\\raw ...\n",
+      "✅ Archivos listos en data/raw.\n"
      ]
     }
    ],
