--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -2,16 +2,234 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bab2624b",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  WARNING: The scripts f2py.exe and numpy-config.exe are installed in 'c:\\Users\\samir\\AppData\\Local\\Programs\\Python\\Python312\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+      "\n",
+      "[notice] A new release of pip is available: 23.2.1 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pandas\n",
+      "  Obtaining dependency information for pandas from https://files.pythonhosted.org/packages/86/41/585a168330ff063014880a80d744219dbf1dd7a1c706e75ab3425a987384/pandas-2.3.3-cp312-cp312-win_amd64.whl.metadata\n",
+      "  Downloading pandas-2.3.3-cp312-cp312-win_amd64.whl.metadata (19 kB)\n",
+      "Collecting numpy>=1.26.0 (from pandas)\n",
+      "  Obtaining dependency information for numpy>=1.26.0 from https://files.pythonhosted.org/packages/32/ee/de999f2625b80d043d6d2d628c07d0d5555a677a3cf78fdf868d409b8766/numpy-2.3.3-cp312-cp312-win_amd64.whl.metadata\n",
+      "  Downloading numpy-2.3.3-cp312-cp312-win_amd64.whl.metadata (60 kB)\n",
+      "     ---------------------------------------- 0.0/60.9 kB ? eta -:--:--\n",
+      "     -------------------- ------------------- 30.7/60.9 kB 1.3 MB/s eta 0:00:01\n",
+      "     ---------------------------------------- 60.9/60.9 kB 1.6 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\samir\\appdata\\roaming\\python\\python312\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Collecting pytz>=2020.1 (from pandas)\n",
+      "  Obtaining dependency information for pytz>=2020.1 from https://files.pythonhosted.org/packages/81/c4/34e93fe5f5429d7570ec1fa436f1986fb1f00c3e0f43a589fe2bbcd22c3f/pytz-2025.2-py2.py3-none-any.whl.metadata\n",
+      "  Downloading pytz-2025.2-py2.py3-none-any.whl.metadata (22 kB)\n",
+      "Collecting tzdata>=2022.7 (from pandas)\n",
+      "  Obtaining dependency information for tzdata>=2022.7 from https://files.pythonhosted.org/packages/5c/23/c7abc0ca0a1526a0774eca151daeb8de62ec457e77262b66b359c3c7679e/tzdata-2025.2-py2.py3-none-any.whl.metadata\n",
+      "  Downloading tzdata-2025.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\samir\\appdata\\roaming\\python\\python312\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Downloading pandas-2.3.3-cp312-cp312-win_amd64.whl (11.0 MB)\n",
+      "   ---------------------------------------- 0.0/11.0 MB ? eta -:--:--\n",
+      "    --------------------------------------- 0.2/11.0 MB 13.0 MB/s eta 0:00:01\n",
+      "   -- ------------------------------------- 0.6/11.0 MB 9.4 MB/s eta 0:00:02\n",
+      "   --- ------------------------------------ 1.0/11.0 MB 9.5 MB/s eta 0:00:02\n",
+      "   ----- ---------------------------------- 1.5/11.0 MB 10.3 MB/s eta 0:00:01\n",
+      "   ------ --------------------------------- 1.9/11.0 MB 10.8 MB/s eta 0:00:01\n",
+      "   -------- ------------------------------- 2.3/11.0 MB 11.3 MB/s eta 0:00:01\n",
+      "   --------- ------------------------------ 2.7/11.0 MB 10.9 MB/s eta 0:00:01\n",
+      "   ----------- ---------------------------- 3.2/11.0 MB 11.2 MB/s eta 0:00:01\n",
+      "   ------------- -------------------------- 3.6/11.0 MB 11.5 MB/s eta 0:00:01\n",
+      "   -------------- ------------------------- 4.0/11.0 MB 11.6 MB/s eta 0:00:01\n",
+      "   ---------------- ----------------------- 4.4/11.0 MB 11.3 MB/s eta 0:00:01\n",
+      "   ----------------- ---------------------- 4.8/11.0 MB 11.5 MB/s eta 0:00:01\n",
+      "   ------------------- -------------------- 5.3/11.0 MB 11.3 MB/s eta 0:00:01\n",
+      "   -------------------- ------------------- 5.7/11.0 MB 11.4 MB/s eta 0:00:01\n",
+      "   ---------------------- ----------------- 6.1/11.0 MB 11.5 MB/s eta 0:00:01\n",
+      "   ----------------------- ---------------- 6.5/11.0 MB 11.6 MB/s eta 0:00:01\n",
+      "   ------------------------- -------------- 7.0/11.0 MB 11.4 MB/s eta 0:00:01\n",
+      "   -------------------------- ------------- 7.4/11.0 MB 11.6 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 7.8/11.0 MB 11.6 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 8.3/11.0 MB 11.5 MB/s eta 0:00:01\n",
+      "   ------------------------------- -------- 8.7/11.0 MB 11.6 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 9.1/11.0 MB 11.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 9.6/11.0 MB 11.6 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 10.0/11.0 MB 11.6 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 10.4/11.0 MB 11.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  10.9/11.0 MB 11.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  11.0/11.0 MB 11.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 11.0/11.0 MB 10.9 MB/s eta 0:00:00\n",
+      "Downloading numpy-2.3.3-cp312-cp312-win_amd64.whl (12.8 MB)\n",
+      "   ---------------------------------------- 0.0/12.8 MB ? eta -:--:--\n",
+      "   - -------------------------------------- 0.5/12.8 MB 9.8 MB/s eta 0:00:02\n",
+      "   -- ------------------------------------- 0.9/12.8 MB 11.2 MB/s eta 0:00:02\n",
+      "   ---- ----------------------------------- 1.3/12.8 MB 10.4 MB/s eta 0:00:02\n",
+      "   ----- ---------------------------------- 1.8/12.8 MB 11.2 MB/s eta 0:00:01\n",
+      "   ------ --------------------------------- 2.2/12.8 MB 11.5 MB/s eta 0:00:01\n",
+      "   -------- ------------------------------- 2.6/12.8 MB 11.1 MB/s eta 0:00:01\n",
+      "   --------- ------------------------------ 3.0/12.8 MB 11.3 MB/s eta 0:00:01\n",
+      "   ---------- ----------------------------- 3.4/12.8 MB 11.5 MB/s eta 0:00:01\n",
+      "   ------------ --------------------------- 3.9/12.8 MB 11.7 MB/s eta 0:00:01\n",
+      "   ------------- -------------------------- 4.3/12.8 MB 11.4 MB/s eta 0:00:01\n",
+      "   -------------- ------------------------- 4.7/12.8 MB 11.6 MB/s eta 0:00:01\n",
+      "   ---------------- ----------------------- 5.2/12.8 MB 11.3 MB/s eta 0:00:01\n",
+      "   ----------------- ---------------------- 5.6/12.8 MB 11.5 MB/s eta 0:00:01\n",
+      "   ------------------ --------------------- 6.0/12.8 MB 11.6 MB/s eta 0:00:01\n",
+      "   -------------------- ------------------- 6.4/12.8 MB 11.7 MB/s eta 0:00:01\n",
+      "   --------------------- ------------------ 6.8/12.8 MB 11.8 MB/s eta 0:00:01\n",
+      "   ---------------------- ----------------- 7.2/12.8 MB 11.6 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 7.7/12.8 MB 11.7 MB/s eta 0:00:01\n",
+      "   ------------------------- -------------- 8.1/12.8 MB 11.5 MB/s eta 0:00:01\n",
+      "   -------------------------- ------------- 8.6/12.8 MB 11.6 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 9.0/12.8 MB 11.7 MB/s eta 0:00:01\n",
+      "   ----------------------------- ---------- 9.4/12.8 MB 11.8 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 9.8/12.8 MB 11.6 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 10.3/12.8 MB 11.7 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 10.8/12.8 MB 11.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 11.2/12.8 MB 11.7 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 11.6/12.8 MB 11.7 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 12.0/12.8 MB 11.7 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 12.4/12.8 MB 11.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  12.8/12.8 MB 11.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  12.8/12.8 MB 11.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 12.8/12.8 MB 10.7 MB/s eta 0:00:00\n",
+      "Downloading pytz-2025.2-py2.py3-none-any.whl (509 kB)\n",
+      "   ---------------------------------------- 0.0/509.2 kB ? eta -:--:--\n",
+      "   ---------------------------------- ---- 450.6/509.2 kB 14.2 MB/s eta 0:00:01\n",
+      "   --------------------------------------- 509.2/509.2 kB 16.1 MB/s eta 0:00:00\n",
+      "Downloading tzdata-2025.2-py2.py3-none-any.whl (347 kB)\n",
+      "   ---------------------------------------- 0.0/347.8 kB ? eta -:--:--\n",
+      "   --------------------------------------- 347.8/347.8 kB 10.9 MB/s eta 0:00:00\n",
+      "Installing collected packages: pytz, tzdata, numpy, pandas\n",
+      "Successfully installed numpy-2.3.3 pandas-2.3.3 pytz-2025.2 tzdata-2025.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install pandas\n",
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
+    "\n",
+    "DATA_DIR = Path(\"data/raw\")\n",
+    "\n",
+    "PD_KW = dict(dtype_backend=\"pyarrow\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7779c96",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def load_csv(path: Path, usecols=None, dtypes=None, nrows=None):\n",
+    "    \"\"\"\n",
+    "    Carga un CSV a DataFrame de forma robusta.\n",
+    "    - usecols: columnas a leer (si quieres probar con un subconjunto).\n",
+    "    - dtypes: mapeo de tipos por columna si ya los conoces.\n",
+    "    - nrows: para muestrear primeras N filas si necesitas una carga rápida.\n",
+    "    \"\"\"\n",
+    "    if not path.exists():\n",
+    "        raise FileNotFoundError(f\"No existe: {path}\")\n",
+    "\n",
+    "    try:\n",
+    "        df = pd.read_csv(\n",
+    "            path,\n",
+    "            usecols=usecols,\n",
+    "            dtype=dtypes,\n",
+    "            low_memory=False,    # evita inferencias parciales\n",
+    "            on_bad_lines=\"warn\", # avisa si hay líneas corruptas\n",
+    "            **PD_KW               # usa backend pyarrow si está disponible\n",
+    "        )\n",
+    "    except TypeError:\n",
+    "        df = pd.read_csv(\n",
+    "            path,\n",
+    "            usecols=usecols,\n",
+    "            dtype=dtypes,\n",
+    "            low_memory=False,\n",
+    "            on_bad_lines=\"warn\",\n",
+    "        )\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50335535",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_chess   = DATA_DIR / \"chessData.csv\"\n",
+    "path_random  = DATA_DIR / \"random_evals.csv\"\n",
+    "path_tactic  = DATA_DIR / \"tactic_evals.csv\"\n",
+    "\n",
+    "df_chess  = load_csv(path_chess)\n",
+    "df_random = load_csv(path_random)\n",
+    "df_tactic = load_csv(path_tactic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04a51d39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def overview(df: pd.DataFrame, name: str = \"DataFrame\", show_cols=20):\n",
+    "    print(\"=\" * 100)\n",
+    "    print(f\"📦 {name}\")\n",
+    "    print(\"- Dimensiones:\", df.shape)                 \n",
+    "    print(\"- Columnas:\", len(df.columns))\n",
+    "    print(\"- Primeras columnas:\", list(df.columns[:show_cols]))\n",
+    "    print(\"\\n🔹 Tipos de datos:\")\n",
+    "    display(df.dtypes.to_frame(\"dtype\").head(show_cols))\n",
+    "\n",
+    "    print(\"\\n🔹 Memoria estimada por columna (Top 10):\")\n",
+    "    mem = df.memory_usage(deep=True).sort_values(ascending=False).head(10)\n",
+    "    display((mem / (1024**2)).round(3).rename(\"MB\").to_frame())\n",
+    "\n",
+    "    print(\"\\n🔹 df.info():\")\n",
+    "    df.info(memory_usage=\"deep\")\n",
+    "\n",
+    "    print(\"\\n🔹 df.head():\")\n",
+    "    display(df.head(3))\n",
+    "\n",
+    "    print(\"\\n🔹 Valores únicos por columna (muestra):\")\n",
+    "    display(df.nunique(dropna=True).sort_values(ascending=False).head(10).to_frame(\"nunique\"))\n",
+    "\n",
+    "    # (complemento mínimo para Paso 4, solo conteo bruto de nulos)\n",
+    "    print(\"\\n🔹 Conteo de nulos (Top 10):\")\n",
+    "    display(df.isna().sum().sort_values(ascending=False).head(10).to_frame(\"nulos\"))\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
