--- a/notebooks/00_fetch_data.ipynb
+++ b/notebooks/00_fetch_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "f8b0c07a",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
+   "id": "352b405d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting gdown\n",
+      "  Using cached gdown-5.2.0-py3-none-any.whl.metadata (5.8 kB)\n",
+      "Requirement already satisfied: beautifulsoup4 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from gdown) (4.13.5)\n",
+      "Collecting filelock (from gdown)\n",
+      "  Using cached filelock-3.19.1-py3-none-any.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: requests[socks] in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from gdown) (2.32.5)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from gdown) (4.67.1)\n",
+      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from beautifulsoup4->gdown) (2.8)\n",
+      "Requirement already satisfied: typing-extensions>=4.0.0 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from beautifulsoup4->gdown) (4.15.0)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests[socks]->gdown) (3.4.3)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests[socks]->gdown) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests[socks]->gdown) (2.5.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests[socks]->gdown) (2025.8.3)\n",
+      "Collecting PySocks!=1.5.7,>=1.5.6 (from requests[socks]->gdown)\n",
+      "  Using cached PySocks-1.7.1-py3-none-any.whl.metadata (13 kB)\n",
+      "Requirement already satisfied: colorama in c:\\users\\asus\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from tqdm->gdown) (0.4.6)\n",
+      "Using cached gdown-5.2.0-py3-none-any.whl (18 kB)\n",
+      "Using cached filelock-3.19.1-py3-none-any.whl (15 kB)\n",
+      "Using cached PySocks-1.7.1-py3-none-any.whl (16 kB)\n",
+      "Installing collected packages: PySocks, filelock, gdown\n",
+      "\n",
+      "   ---------------------------------------- 3/3 [gdown]\n",
+      "\n",
+      "Successfully installed PySocks-1.7.1 filelock-3.19.1 gdown-5.2.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install gdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "9956eb72",
    "metadata": {},
    "outputs": [
@@ -38,9 +80,9 @@
      "text": [
       "Downloading...\n",
       "From (original): https://drive.google.com/uc?id=1ApZqHWxtuhxrNqdL-odfDxxIceoCiA2z\n",
-      "From (redirected): https://drive.google.com/uc?id=1ApZqHWxtuhxrNqdL-odfDxxIceoCiA2z&confirm=t&uuid=5983bf19-b250-4349-8c55-443ff3e491d2\n",
-      "To: c:\\Users\\samir\\Documents\\noveno semestre\\aprendizaje maquina\\stocksalmon\\data\\raw\\archive.zip\n",
-      "100%|██████████| 209M/209M [00:19<00:00, 10.9MB/s] \n"
+      "From (redirected): https://drive.google.com/uc?id=1ApZqHWxtuhxrNqdL-odfDxxIceoCiA2z&confirm=t&uuid=ebffd124-c3b6-4dbd-b123-b9b9f8f97d08\n",
+      "To: c:\\Users\\ASUS\\Desktop\\stocksalmon\\data\\raw\\archive.zip\n",
+      "100%|██████████| 209M/209M [03:05<00:00, 1.13MB/s] \n"
      ]
     },
     {
@@ -110,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
