--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "bab2624b",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "b7779c96",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "1c1c80a0",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "04a51d39",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "c413c465",
    "metadata": {},
    "outputs": [
@@ -125,6 +125,35 @@
     },
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "dtype",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "ref": "818069f8-0d2c-4380-925f-7152af3682af",
+       "rows": [
+        [
+         "FEN",
+         "string[pyarrow]"
+        ],
+        [
+         "Evaluation",
+         "string[pyarrow]"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 2
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -179,6 +208,39 @@
     },
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "MB",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "aa99e232-cb61-4aa7-9ce4-25a464955318",
+       "rows": [
+        [
+         "FEN",
+         "741.373"
+        ],
+        [
+         "Evaluation",
+         "90.911"
+        ],
+        [
+         "Index",
+         "0.0"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 3
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -249,6 +311,47 @@
     },
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "FEN",
+         "rawType": "string[pyarrow]",
+         "type": "unknown"
+        },
+        {
+         "name": "Evaluation",
+         "rawType": "string[pyarrow]",
+         "type": "unknown"
+        }
+       ],
+       "ref": "6892ad24-8a6b-4eaa-88c0-e918a87561a1",
+       "rows": [
+        [
+         "0",
+         "rnbqkbnr/pppppppp/8/8/4P3/8/PPPP1PPP/RNBQKBNR b KQkq - 0 1",
+         "-10"
+        ],
+        [
+         "1",
+         "rnbqkbnr/pppp1ppp/4p3/8/4P3/8/PPPP1PPP/RNBQKBNR w KQkq - 0 2",
+         "+56"
+        ],
+        [
+         "2",
+         "rnbqkbnr/pppp1ppp/4p3/8/3PP3/8/PPP2PPP/RNBQKBNR b KQkq - 0 2",
+         "-9"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 3
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -312,6 +415,35 @@
     },
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "nunique",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "dfbc906a-2c33-46cf-848f-8713e51b36a9",
+       "rows": [
+        [
+         "FEN",
+         "12954834"
+        ],
+        [
+         "Evaluation",
+         "13544"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 2
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -366,6 +498,35 @@
     },
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "nulos",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "2a45a84a-4257-4586-b422-1755fc70f969",
+       "rows": [
+        [
+         "FEN",
+         "0"
+        ],
+        [
+         "Evaluation",
+         "0"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 2
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -427,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "58490d3a",
    "metadata": {},
    "outputs": [],
@@ -458,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "5a75e46a",
    "metadata": {},
    "outputs": [],
@@ -503,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "49d30706",
    "metadata": {},
    "outputs": [],
@@ -564,12 +725,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "eb29229e",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "col",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "dtype",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "n_unique",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "%_unique",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "n_missing",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "%_missing",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mode",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "mode_freq",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "9ce7b653-7af0-45fd-b1cc-e2c4326169ae",
+       "rows": [
+        [
+         "FEN",
+         "string[pyarrow]",
+         "12954834",
+         "99.98",
+         "0",
+         "0.0",
+         "r2qkbnr/pp3ppp/2bpp3/8/3QP3/2N2N2/PPP2PPP/R1B2RK1 b kq - 1 8",
+         "0.0"
+        ],
+        [
+         "Evaluation",
+         "string[pyarrow]",
+         "13544",
+         "0.1",
+         "0",
+         "0.0",
+         "0",
+         "0.0973"
+        ]
+       ],
+       "shape": {
+        "columns": 7,
+        "rows": 2
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -658,6 +890,132 @@
     },
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "Evaluation",
+         "rawType": "string[pyarrow]",
+         "type": "unknown"
+        },
+        {
+         "name": "count",
+         "rawType": "int64[pyarrow]",
+         "type": "unknown"
+        },
+        {
+         "name": "pct",
+         "rawType": "double[pyarrow]",
+         "type": "unknown"
+        }
+       ],
+       "ref": "a11577de-e732-46c5-a21b-5af88abea9ce",
+       "rows": [
+        [
+         "0",
+         "1261356",
+         "9.73"
+        ],
+        [
+         "+13",
+         "157897",
+         "1.22"
+        ],
+        [
+         "-13",
+         "148689",
+         "1.15"
+        ],
+        [
+         "+46",
+         "41674",
+         "0.32"
+        ],
+        [
+         "+53",
+         "41404",
+         "0.32"
+        ],
+        [
+         "+61",
+         "40257",
+         "0.31"
+        ],
+        [
+         "+38",
+         "39831",
+         "0.31"
+        ],
+        [
+         "+69",
+         "39133",
+         "0.3"
+        ],
+        [
+         "+30",
+         "38798",
+         "0.3"
+        ],
+        [
+         "+76",
+         "38247",
+         "0.3"
+        ],
+        [
+         "+23",
+         "37220",
+         "0.29"
+        ],
+        [
+         "+84",
+         "36049",
+         "0.28"
+        ],
+        [
+         "+92",
+         "34788",
+         "0.27"
+        ],
+        [
+         "+100",
+         "32544",
+         "0.25"
+        ],
+        [
+         "+15",
+         "32454",
+         "0.25"
+        ],
+        [
+         "-30",
+         "31123",
+         "0.24"
+        ],
+        [
+         "-23",
+         "30687",
+         "0.24"
+        ],
+        [
+         "-38",
+         "30180",
+         "0.23"
+        ],
+        [
+         "+107",
+         "29898",
+         "0.23"
+        ],
+        [
+         "-46",
+         "29649",
+         "0.23"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 20
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -852,7 +1210,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -866,7 +1224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
