--- a/notebooks/03_uva.ipynb
+++ b/notebooks/03_uva.ipynb
@@ -1776,13 +1776,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.12.1"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
