--- a/notebooks/07_data_splitting.ipynb
+++ b/notebooks/07_data_splitting.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "a3af29b9",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "stocksalmon-venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -251,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
