--- a/notebooks/eda_01_structure.ipynb
+++ b/notebooks/eda_01_structure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bab2624b",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b7779c96",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1c1c80a0",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "04a51d39",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c413c465",
    "metadata": {},
    "outputs": [
@@ -125,35 +125,6 @@
     },
     {
      "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "dtype",
-         "rawType": "object",
-         "type": "unknown"
-        }
-       ],
-       "ref": "818069f8-0d2c-4380-925f-7152af3682af",
-       "rows": [
-        [
-         "FEN",
-         "string[pyarrow]"
-        ],
-        [
-         "Evaluation",
-         "string[pyarrow]"
-        ]
-       ],
-       "shape": {
-        "columns": 1,
-        "rows": 2
-       }
-      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -208,39 +179,6 @@
     },
     {
      "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "MB",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "ref": "aa99e232-cb61-4aa7-9ce4-25a464955318",
-       "rows": [
-        [
-         "FEN",
-         "741.373"
-        ],
-        [
-         "Evaluation",
-         "90.911"
-        ],
-        [
-         "Index",
-         "0.0"
-        ]
-       ],
-       "shape": {
-        "columns": 1,
-        "rows": 3
-       }
-      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -311,47 +249,6 @@
     },
     {
      "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "FEN",
-         "rawType": "string[pyarrow]",
-         "type": "unknown"
-        },
-        {
-         "name": "Evaluation",
-         "rawType": "string[pyarrow]",
-         "type": "unknown"
-        }
-       ],
-       "ref": "6892ad24-8a6b-4eaa-88c0-e918a87561a1",
-       "rows": [
-        [
-         "0",
-         "rnbqkbnr/pppppppp/8/8/4P3/8/PPPP1PPP/RNBQKBNR b KQkq - 0 1",
-         "-10"
-        ],
-        [
-         "1",
-         "rnbqkbnr/pppp1ppp/4p3/8/4P3/8/PPPP1PPP/RNBQKBNR w KQkq - 0 2",
-         "+56"
-        ],
-        [
-         "2",
-         "rnbqkbnr/pppp1ppp/4p3/8/3PP3/8/PPP2PPP/RNBQKBNR b KQkq - 0 2",
-         "-9"
-        ]
-       ],
-       "shape": {
-        "columns": 2,
-        "rows": 3
-       }
-      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -415,35 +312,6 @@
     },
     {
      "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "nunique",
-         "rawType": "int64",
-         "type": "integer"
-        }
-       ],
-       "ref": "dfbc906a-2c33-46cf-848f-8713e51b36a9",
-       "rows": [
-        [
-         "FEN",
-         "12954834"
-        ],
-        [
-         "Evaluation",
-         "13544"
-        ]
-       ],
-       "shape": {
-        "columns": 1,
-        "rows": 2
-       }
-      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -498,35 +366,6 @@
     },
     {
      "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "nulos",
-         "rawType": "int64",
-         "type": "integer"
-        }
-       ],
-       "ref": "2a45a84a-4257-4586-b422-1755fc70f969",
-       "rows": [
-        [
-         "FEN",
-         "0"
-        ],
-        [
-         "Evaluation",
-         "0"
-        ]
-       ],
-       "shape": {
-        "columns": 1,
-        "rows": 2
-       }
-      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -581,7 +420,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -595,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
