--- a/notebooks/eda_07_data_splitting.ipynb
+++ b/notebooks/eda_07_data_splitting.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "8e7ad54f",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "302c60f0",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "2e158228",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
       "  ✓ validation_data.parquet guardado (3,317,307 filas)\n",
       "  ✓ testing_data.parquet guardado (1,658,652 filas)\n",
       "\n",
-      " Todos los datasets modificados guardados en: C:\\Users\\USUARIO\\Documents\\Code\\stocksalmon\\data\\processed\n"
+      " Todos los datasets modificados guardados en: C:\\Users\\Samuel\\Documents\\noveno semestre\\aprendizaje maquina\\stocksalmon\\data\\processed\n"
      ]
     }
    ],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "a3af29b9",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "25001bd2",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -251,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
