--- a/notebooks/eda_08_feature_materialization.ipynb
+++ b/notebooks/eda_08_feature_materialization.ipynb
@@ -28,7 +28,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "c:\\Users\\Samuel\\Documents\\noveno semestre\\aprendizaje maquina\\stocksalmon\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "c:\\Users\\samir\\Documents\\noveno semestre\\aprendizaje maquina\\stocksalmon\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
             "  from .autonotebook import tqdm as notebook_tqdm\n"
           ]
         }
@@ -232,7 +232,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Material features: 100%|██████████| 11610568/11610568 [01:46<00:00, 108825.29it/s]\n"
+            "Material features: 100%|██████████| 11610568/11610568 [02:07<00:00, 91056.03it/s]\n"
           ]
         },
         {
@@ -247,7 +247,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Material features: 100%|██████████| 3317307/3317307 [00:30<00:00, 107443.23it/s]\n"
+            "Material features: 100%|██████████| 3317307/3317307 [00:35<00:00, 92361.49it/s]\n"
           ]
         },
         {
@@ -262,7 +262,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Material features: 100%|██████████| 1658652/1658652 [00:16<00:00, 102823.77it/s]\n"
+            "Material features: 100%|██████████| 1658652/1658652 [00:17<00:00, 94618.85it/s]\n"
           ]
         },
         {
@@ -545,7 +545,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "venv",
       "language": "python",
       "name": "python3"
     },
@@ -559,7 +559,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.9"
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
