--- a/notebooks/model_cnn_classification.ipynb
+++ b/notebooks/model_cnn_classification.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "cfd26cec",
    "metadata": {},
    "outputs": [],
@@ -114,6 +114,12 @@
     "SPLIT_SIZES = {}\n",
     "\n",
     "def fen_to_tensor(fen: str) -> tuple[np.ndarray, bool]:\n",
+    "    \"\"\"\n",
+    "    Convierte notación FEN a tensor 3D del tablero\n",
+    "    - Normaliza perspectiva: siempre desde el punto de vista del jugador activo\n",
+    "    - Si le toca a negras: invierte el tablero y cambia mayús/minús\n",
+    "    - Retorna: tensor (8,8,12) + si es turno de negras\n",
+    "    \"\"\"\n",
     "    parts = fen.split(' ')\n",
     "    board_field = parts[0]\n",
     "    active = parts[1] if len(parts) > 1 else 'w'\n",
@@ -145,6 +151,14 @@
     "    return np.array(tensor_rows, dtype=np.float32), is_black_turn\n",
     "\n",
     "def to_example(row: pd.Series) -> tf.train.Example:\n",
+    "    \"\"\"\n",
+    "    Convierte una fila del dataset a formato TFRecord\n",
+    "    - Procesa FEN → tensor del tablero\n",
+    "    - Ajusta características auxiliares según el turno (si negras, invierte signos)\n",
+    "    - Intercambia material blanco/negro si es turno de negras\n",
+    "    - Serializa todo en formato TensorFlow\n",
+    "    \"\"\"\n",
+    "\n",
     "    tensor, is_black_turn = fen_to_tensor(row['FEN'])\n",
     "    tensor_flat = tensor.flatten().astype(np.float32)\n",
     "\n",
@@ -166,7 +180,13 @@
     "    return tf.train.Example(features=tf.train.Features(feature=feature))\n",
     "\n",
     "def write_tfrecord(split: str, limit: int | None = None, batch_size: int = 50_000):\n",
-    "    \"\"\"Exporta el split a TFRecord sin cargar todo el parquet en memoria.\"\"\"\n",
+    "    \"\"\"\n",
+    "    - Exporta dataset a TFRecord sin cargar todo en memoria\n",
+    "    - Lee parquet por chunks de 50K filas\n",
+    "    - Selecciona aleatoriamente 'limit' posiciones si hay más datos\n",
+    "    - Procesa y guarda cada posición en formato binario optimizado\n",
+    "    \"\"\"\n",
+    "\n",
     "    input_path = PROCESSED_DIR / f'{split}_enriched.parquet'\n",
     "    assert input_path.exists(), f'No se encontró {input_path}'\n",
     "\n",
@@ -308,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ea1b9bfb",
    "metadata": {},
    "outputs": [],
@@ -322,6 +342,13 @@
     "    feature_description[col] = tf.io.FixedLenFeature([], tf.float32)\n",
     "\n",
     "def parse_example(serialized):\n",
+    "    \"\"\"\n",
+    "    Deserializa TFRecord y prepara datos para el modelo\n",
+    "    - Reshapea tablero a (8,8,12)\n",
+    "    - Convierte clase a one-hot de 3 categorías [ventaja, empate, desventaja]\n",
+    "    - Agrupa características auxiliares en un vector\n",
+    "    - Retorna: (tablero, aux_features), (clase_onehot, valor_regresión)\n",
+    "    \"\"\"\n",
     "    parsed = tf.io.parse_single_example(serialized, feature_description)\n",
     "    board = tf.reshape(parsed.pop('board'), BOARD_SHAPE)\n",
     "    class_id = tf.cast(parsed.pop(TARGET_CLASS_COL), tf.int32)\n",
@@ -331,6 +358,12 @@
     "    return (board, aux_vec), class_label\n",
     "\n",
     "def augment(board, aux):\n",
+    "    \"\"\"\n",
+    "    Data augmentation por simetrías del ajedrez\n",
+    "    - 50% probabilidad: reflejo horizontal (columnas a↔h, b↔g, etc.)\n",
+    "    - 50% probabilidad: reflejo vertical (filas 1↔8, 2↔7, etc.)\n",
+    "    - Mantiene las características auxiliares sin cambios\n",
+    "    \"\"\"\n",
     "    if tf.random.uniform([]) > 0.5:\n",
     "        board = tf.image.flip_left_right(board)\n",
     "    if tf.random.uniform([]) > 0.5:\n",
@@ -339,6 +372,13 @@
     "    return board, aux\n",
     "\n",
     "def make_dataset(split: str, batch_size: int, training: bool = True, include_sample_weights: bool = False):\n",
+    "    \"\"\"\n",
+    "    Crea pipeline optimizado de TensorFlow\n",
+    "    - Carga TFRecord → parsea → aplica augmentation (solo train)\n",
+    "    - Shuffle de 10K elementos para training\n",
+    "    - Repite dataset infinitamente (epochs controladas por steps)\n",
+    "    - Agrupa en batches y prefetch para optimizar GPU\n",
+    "    \"\"\"\n",
     "    tfrecord_path = TFRECORD_DIR / f'{split}.tfrecord'\n",
     "    ds = tf.data.TFRecordDataset(str(tfrecord_path))\n",
     "    ds = ds.map(parse_example, num_parallel_calls=AUTOTUNE)\n",
